--- a/bootstrap.html
+++ b/bootstrap.html
@@ -36,17 +36,6 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-    <script>
-
-         $(function(){
-             $('#calc').click(function(){
-                 const milhas = parseFloat($('#milhas').val()) //passar valor
-                 const metros = 1609.34 * milhas 
-                 $('#metros').val(metros) //setar valor
-             })
-         })
-
-
-    </script>  
+    <script src="calc.js"></script> 
 </body>
 </html>
